--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
     <title>Color change</title>
   </head>
   <style>
@@ -11,7 +17,7 @@
     }
   </style>
   <body>
-    <h1 class="name"></h1>
+    <h1 class="name text-center display-1 text-capitalize fw-bold"></h1>
     <script>
       let body = document.body;
       let name = document.querySelector(".name");
